; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_c-parser.c_c_parser_asm_clobbers.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_c-parser.c_c_parser_asm_clobbers.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NULL_TREE = common dso_local global i64 0, align 8
@CPP_COMMA = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*)* @c_parser_asm_clobbers to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @c_parser_asm_clobbers(i32* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  %6 = load i64, i64* @NULL_TREE, align 8
  store i64 %6, i64* %4, align 8
  br label %7

7:                                                ; preds = %1, %28
  %8 = load i32*, i32** %3, align 8
  %9 = call i64 @c_parser_asm_string_literal(i32* %8)
  store i64 %9, i64* %5, align 8
  %10 = load i64, i64* %5, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %17

12:                                               ; preds = %7
  %13 = load i64, i64* @NULL_TREE, align 8
  %14 = load i64, i64* %5, align 8
  %15 = load i64, i64* %4, align 8
  %16 = call i64 @tree_cons(i64 %13, i64 %14, i64 %15)
  store i64 %16, i64* %4, align 8
  br label %19

17:                                               ; preds = %7
  %18 = load i64, i64* @NULL_TREE, align 8
  store i64 %18, i64* %2, align 8
  br label %31

19:                                               ; preds = %12
  %20 = load i32*, i32** %3, align 8
  %21 = load i32, i32* @CPP_COMMA, align 4
  %22 = call i64 @c_parser_next_token_is(i32* %20, i32 %21)
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %27

24:                                               ; preds = %19
  %25 = load i32*, i32** %3, align 8
  %26 = call i32 @c_parser_consume_token(i32* %25)
  br label %28

27:                                               ; preds = %19
  br label %29

28:                                               ; preds = %24
  br label %7

29:                                               ; preds = %27
  %30 = load i64, i64* %4, align 8
  store i64 %30, i64* %2, align 8
  br label %31

31:                                               ; preds = %29, %17
  %32 = load i64, i64* %2, align 8
  ret i64 %32
}

declare dso_local i64 @c_parser_asm_string_literal(i32*) #1

declare dso_local i64 @tree_cons(i64, i64, i64) #1

declare dso_local i64 @c_parser_next_token_is(i32*, i32) #1

declare dso_local i32 @c_parser_consume_token(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
